@@ -53,6 +53,9 @@ The network HOSTNAME of the target board.
 .BI --outdir \ DIRECTORY
 The name of a DIRECTORY for test log output.
 .TP
+.B --log_dialog
+Emit Expect output to stdout.
+.TP
 .B --reboot
 Reboot the target board when \fBruntest\fR initializes
 (if supported).
